--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p>艾维斯.程序.学习.交流</p>
 
       <footer class="site-footer">
-        <span class="site-footer-owner"><a href="https://github.com/ivhhs/love">love</a></span>
+        <span class="project-tagline"><a href="https://github.com/ivhhs/love">love</a></span>
       </footer>
 
     </section>
