--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
     <section class="page-header">
       <h1 class="project-name">love</h1>
       <h2 class="project-tagline">ivhhs</h2>
-      <a href="https://github.com/ivhhs/love" class="btn">View on GitHub</a>
     </section>
 
     <section class="main-content">
       <p>艾维斯.程序.学习.交流</p>
 
       <footer class="site-footer">
-        <span class="project-tagline"><a href="https://github.com/ivhhs/love">love</a></span>
+        <span class="copyright-ivhhs">©2016 ivhhs</span>
       </footer>
 
     </section>
